--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.12",
+    "prisma-erd-generator": "^0.6.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
